tests/snapshots/examples_fixtures/aoc__2024__day02_part1_test.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day02_part1_test.flx
== compile ==
failed (compile)
== diagnostics ==
error[E011]: Private Member

Cannot access private member `predicate`.

  examples/aoc/2024/day02_part1_test.flx:19:17
   |
19 |     assert_true(Day02.predicate(Day02.parse_report("7 6 4 2 1")))
   |                 ^^^^^^^^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.


error[E011]: Private Member

Cannot access private member `predicate`.

  examples/aoc/2024/day02_part1_test.flx:23:17
   |
23 |     assert_true(Day02.predicate(Day02.parse_report("1 3 6 7 9")))
   |                 ^^^^^^^^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.


error[E011]: Private Member

Cannot access private member `predicate`.

  examples/aoc/2024/day02_part1_test.flx:27:18
   |
27 |     assert_false(Day02.predicate(Day02.parse_report("1 3 2 4 5")))
   |                  ^^^^^^^^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.

Found 3 errors.
== stdout ==
<not executed>
